--- a/index.html
+++ b/index.html
@@ -9,6 +9,34 @@
 </head>
 
 <body>
+    <section class="menu">
+        <div class="title">
+            <h2>Our Menu</h2>
+            <div class="underline"></div>
+        </div>
+        <!-- filter buttons -->
+        <!-- menu items -->
+        <section class="center">
+            <article class="menu-item">
+                <img src="imgs/menu-item .jpeg" class="photo" alt="a menu photo">
+                <div class="item-info">
+                    <header>
+                        <h4>Butter milk pancakes</h4>
+                        <h4 class="price">$15</h4>
+                    </header>
+                    <p class="item-text">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus magnam dicta deleniti,
+                        suscipit velit possimus impedit odit non, quisquam
+                    </p>
+
+                </div>
+            </article>
+        </section>
+    </section>
+
+
+
+
     <script src="index.js"></script>
 </body>
 
