--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
             <div class="underline"></div>
         </div>
         <!-- filter buttons -->
+        <div class="btn-container">
+            <button class="filter-btn" type="button" data-id="all">all</button>
+            <button class="filter-btn" type="button" data-id="breakfast">breakfast</button>
+            <button class="filter-btn" type="button" data-id="lunch">lunch</button>
+            <button class="filter-btn" type="button" data-id="shakes">shakes</button>
+        </div>
         <!-- menu items -->
-        <section class="center">
+        <section class="section-center">
             <article class="menu-item">
                 <img src="imgs/menu-item .jpeg" class="photo" alt="a menu photo">
                 <div class="item-info">
