--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         </div>
         <!-- filter buttons -->
         <div class="btn-container">
-            <button class="filter-btn" type="button" data-id="all">all</button>
+            <!-- <button class="filter-btn" type="button" data-id="all">all</button>
             <button class="filter-btn" type="button" data-id="breakfast">breakfast</button>
             <button class="filter-btn" type="button" data-id="lunch">lunch</button>
-            <button class="filter-btn" type="button" data-id="shakes">shakes</button>
+            <button class="filter-btn" type="button" data-id="shakes">shakes</button> -->
         </div>
         <!-- menu items -->
         <section class="section-center">
